[gd_scene load_steps=9 format=3 uid="uid://b05o8n1wl7igo"]

[ext_resource type="Script" path="res://assets/ui/prize_item/prize_item.gd" id="1_1tk3q"]
[ext_resource type="FontFile" uid="uid://dsbdko653sao5" path="res://assets/fonts/ttf/Poppins-ExtraBold.ttf" id="1_mwbw2"]
[ext_resource type="FontFile" uid="uid://bqlmj2xwvkrst" path="res://assets/fonts/ttf/Poppins-SemiBold.ttf" id="2_b8et7"]
[ext_resource type="Texture2D" uid="uid://c4v4npiwpoef5" path="res://assets/ui/icons/unknown.png" id="2_gml76"]
[ext_resource type="Texture2D" uid="uid://dq0qkundn533s" path="res://assets/ui/icons/lolipop.png" id="3_mbmth"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_q4y0q"]
corner_radius_top_left = 24
corner_radius_top_right = 24
corner_radius_bottom_right = 24
corner_radius_bottom_left = 24

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_m6r2x"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1bw30"]
bg_color = Color(0, 0, 0, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12
shadow_color = Color(0.470588, 0.470588, 0.470588, 0.501961)
shadow_size = 4
shadow_offset = Vector2(0, 2)

[node name="prize_item" type="MarginContainer"]
custom_minimum_size = Vector2(374, 180)
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
size_flags_horizontal = 3
script = ExtResource("1_1tk3q")

[node name="Panel" type="Panel" parent="."]
clip_children = 2
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_q4y0q")

[node name="HBoxContainer" type="HBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Control" type="Control" parent="Panel/HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="Panel/HBoxContainer/Control"]
custom_minimum_size = Vector2(200, 100)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -126.0
offset_top = -117.0
offset_right = 245.0
offset_bottom = 112.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
expand_mode = 1
stretch_mode = 6

[node name="TextureRect2" type="TextureRect" parent="Panel/HBoxContainer/Control"]
custom_minimum_size = Vector2(200, 100)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -126.0
offset_top = -117.0
offset_right = 245.0
offset_bottom = 112.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
texture = ExtResource("2_gml76")
stretch_mode = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 2

[node name="MarginContainer3" type="MarginContainer" parent="Panel/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 12)
layout_mode = 2
size_flags_vertical = 3

[node name="prize_name" type="Label" parent="Panel/HBoxContainer/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_mwbw2")
theme_override_font_sizes/font_size = 20
text = "..."
horizontal_alignment = 2

[node name="MarginContainer" type="MarginContainer" parent="Panel/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 12)
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/HBoxContainer/VBoxContainer"]
layout_mode = 2
alignment = 2

[node name="TextureRect2" type="TextureRect" parent="Panel/HBoxContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(24, 24)
layout_mode = 2
texture = ExtResource("3_mbmth")
expand_mode = 1
stretch_mode = 5

[node name="MarginContainer2" type="MarginContainer" parent="Panel/HBoxContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(12, 0)
layout_mode = 2

[node name="level" type="Label" parent="Panel/HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.305882, 0.231373, 0.160784, 1)
theme_override_fonts/font = ExtResource("1_mwbw2")
theme_override_font_sizes/font_size = 13
text = "..."

[node name="MarginContainer" type="MarginContainer" parent="Panel/HBoxContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(16, 0)
layout_mode = 2

[node name="redeem" type="Button" parent="Panel/HBoxContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(86, 40)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/focus = SubResource("StyleBoxEmpty_m6r2x")
flat = true

[node name="Panel" type="Panel" parent="Panel/HBoxContainer/VBoxContainer/HBoxContainer/redeem"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_1bw30")

[node name="CenterContainer" type="CenterContainer" parent="Panel/HBoxContainer/VBoxContainer/HBoxContainer/redeem"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Label" type="Label" parent="Panel/HBoxContainer/VBoxContainer/HBoxContainer/redeem/CenterContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_b8et7")
theme_override_font_sizes/font_size = 13
text = "Redeem"
horizontal_alignment = 1
vertical_alignment = 2

[node name="MarginContainer2" type="MarginContainer" parent="Panel/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 12)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="Panel/HBoxContainer"]
custom_minimum_size = Vector2(16, 0)
layout_mode = 2

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[connection signal="pressed" from="Panel/HBoxContainer/VBoxContainer/HBoxContainer/redeem" to="." method="_on_redeem_pressed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_http_request_request_completed"]
